# autorok

./: .gitignore  Cargo.toml  README.md  app.window.manifest  autorok.c  build.bat  build.rs  log.txt  manifest.json  resource.rc
.cargo/: config.toml
.github/workflows/: release.yml
autorok_utils/: Cargo.toml
autorok_utils/src/: download.rs  extract.rs  get_cwd.rs  get_dirs.rs  get_executor.rs  lib.rs  request.rs
core/: color.c  get_log_file.c  get_runtime_file.c  head.c
module/: create.c  delete.c  disable.c  enable.c  get_info.c  global.c  join.c  json.c  overview.c  share.c
src/: main.rs
src/manage_zrok/: all_service.rs  check_install.rs  create_service.rs  current_share_join_service.rs  delete_service.rs  display_all_service.rs  enviroment.rs  join_service.rs  mod.rs  reinstall.rs  share_service.rs
src/utils/: download.rs  get_executor.rs  launch_new_terminal.rs  manage_zrok.rs  mod.rs  short_hash.rs
