[package]
name = "autorok"
authors = ["GoodDay360"]
version = "1.7.0"
edition = "2024"

[dependencies]
serde_json = "1.0.141"
whoami = "1.6.0"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"]}
colored = "3.0.0"
dialoguer = "0.11.0"
clearscreen = "4.0.2"
tabled = "0.20.0"
anyhow = "1.0.103"
sha2 = "0.11.0"
reqwest = "0.13.4"
flate2 = "1.1.9"
tar = "0.4.46"
directories = "6.0.0"
indicatif = "0.18.6"
once_cell = "1.21.4"
dashmap = "6.2.1"
launch_terminal = { git = "https://github.com/aptakube/launch-terminal-rs", version = "0.1.0" }

[build-dependencies]
winresource = "0.1.23"
winres = "0.1"





