[package]
name = "autorok_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.18.0"
serde = {version = "1.0.219", features = ["derive"]}
tar = "0.4.44"
flate2 = "1.1.2"
directories = "6.0.0"
whoami = "1.6.0"

